@@ -1,3 +1,7 @@
+2411.	[bug]		Allow using a larger number of sockets than FD_SETSIZE
+			for select().  To enable this, set ISC_SOCKET_MAXSOCKETS
+			at compilation time.  [RT #18433]
+
 2410.	[bug]		Correctly delete m_versionInfo. [RT #18432]
 
 2408.	[bug]		A duplicate TCP dispatch event could be sent, which
